--- a/app/src/main/res/layout/port_activity_main.xml
+++ b/app/src/main/res/layout/port_activity_main.xml
@@ -8,17 +8,11 @@
 
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.WhisperApp.AppBarOverlay">
 
     </com.google.android.material.appbar.AppBarLayout>
-
-    <include
-        android:id="@+id/include"
-        layout="@layout/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="86dp"
-        tools:layout_editor_absoluteX="-3dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
