--- a/app/src/main/res/layout/port_content_main.xml
+++ b/app/src/main/res/layout/port_content_main.xml
@@ -9,8 +9,8 @@
     <include
         android:id="@+id/include"
         layout="@layout/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="55dp" />
+        android:layout_width="407dp"
+        android:layout_height="77dp" />
 
     <ListView
         android:id="@+id/listView_port"
