--- a/app/src/main/res/layout/event_listview.xml
+++ b/app/src/main/res/layout/event_listview.xml
@@ -46,7 +46,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="봉사"
+        android:text="투자"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -56,12 +56,12 @@
 
     <Button
         android:id="@+id/studyBtn"
-        android:layout_width="145dp"
-        android:layout_height="wrap_content"
+        android:layout_width="121dp"
+        android:layout_height="47dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:text="스터디·동아리"
+        android:text="환전"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -76,7 +76,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="교육"
+        android:text="적금"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -100,12 +100,12 @@
 
     <Button
         android:id="@+id/contestBtn"
-        android:layout_width="145dp"
-        android:layout_height="50dp"
+        android:layout_width="121dp"
+        android:layout_height="52dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="대회·공모전"
+        android:text="대출"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
