--- a/app/src/main/res/layout/port_reg.xml
+++ b/app/src/main/res/layout/port_reg.xml
@@ -38,7 +38,7 @@
                 android:text="제목"
                 android:textSize="20sp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/edtTitle_port"
                 android:layout_width="330dp"
                 android:layout_height="match_parent"
@@ -61,7 +61,7 @@
                 android:text="기간"
                 android:textSize="20sp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/edtDate_port"
                 android:layout_width="330dp"
                 android:layout_height="40dp"
@@ -84,7 +84,7 @@
                 android:text="분류"
                 android:textSize="20sp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/edtClassification_port"
                 android:layout_width="330dp"
                 android:layout_height="40dp"
@@ -111,7 +111,7 @@
             android:text="내용"
             android:textSize="20sp" />
 
-        <EditText
+        <TextView
             android:id="@+id/edtContent_port"
             android:layout_width="330dp"
             android:layout_height="wrap_content"
@@ -138,7 +138,7 @@
             android:text="메모"
             android:textSize="20sp" />
 
-        <EditText
+        <TextView
             android:id="@+id/edtMemo_port"
             android:layout_width="330dp"
             android:layout_height="wrap_content"
